--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
     ext {
         compose_version = '1.3.3'
-        material_version = 'material3:1.0.0-alpha11'
+        material_version = '1.0.1'
+        material_extended_icons_version = '1.3.1'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
