add firebase bootcamp activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:theme="@style/Theme.IBDB"
         tools:targetApi="31" >
         <activity
+            android:name=".FirebaseActivity"
+            android:exported="false"
+            android:theme="@style/Theme.IBDB" />
+        <activity
             android:name=".GreetingActivity"
             android:exported="false"
             android:label="@string/title_activity_greeting"
