--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,11 @@
 buildscript {
+    repositories {
+        google()  // Google's Maven repository
+        mavenCentral()  // Maven Central repository
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.15'
+    }
     ext {
         compose_version = '1.3.3'
         material_version = 'material3:1.0.0-alpha11'
