--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,5 @@ dependencies {
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:31.2.2')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-
+    implementation 'com.google.firebase:firebase-database-ktx'
 }
