--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!-- TODO: change the application name to a more general one -->
     <application
+        android:name=".webapi.WebApiApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -10,7 +15,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.IBDB"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".webapi.WebApiActivity"
+            android:exported="false"
+            android:label="@string/title_activity_web_api"
+            android:theme="@style/Theme.IBDB" />
         <activity
             android:name=".GreetingActivity"
             android:exported="false"
@@ -19,7 +29,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.IBDB" >
+            android:theme="@style/Theme.IBDB">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
