--- a/data/build.gradle
+++ b/data/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'com.github.leuludyha.ibdb'
+    namespace 'com.github.leuludyha.ibdb.data'
     compileSdk 33
 
     defaultConfig {
@@ -32,9 +32,27 @@ android {
 
 dependencies {
 
+    implementation project(path: ':domain')
+
     implementation "androidx.core:core-ktx:$core_ktx_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // RETROFIT
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    // Coroutines test
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+
+    // Mock web server
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
+
+    // Google truth for assertions
+    testImplementation "com.google.truth:truth:1.1.3"
 }
