--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'com.github.leuludyha.ibdb'
+    namespace 'com.github.leuludyha.ibdb.domain'
     compileSdk 33
 
     defaultConfig {
@@ -37,4 +37,7 @@ dependencies {
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // RETROFIT
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
