--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,8 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
+BASE_URL="https://openlibrary.org/"
+
 # Implement CI (done by ourselves)
 org.gradle.daemon=true
 org.gradle.caching=true
