--- a/build.gradle
+++ b/build.gradle
@@ -14,3 +14,5 @@ plugins {
     id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20-Beta' apply false
 }
+
+apply from: 'jacoco/project.gradle'
