Add excludes jdk.internal.* in jacoco task to all modules to try to fix bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
 }
 
+tasks.withType(Test) {
+    jacoco.includeNoLocationClasses = true
+    jacoco.excludes = ['jdk.internal.*']
+}
+
+
 apply from: '../jacoco/modules.gradle'
