--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation project(path: ':data')
+    implementation project(path: ':domain')
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
@@ -69,9 +70,7 @@ dependencies {
     // It is not recommended to use this directly as the archive size is ~30MB apparently
     implementation "androidx.compose.material:material-icons-extended:$material_extended_icons_version"
 
-//========== ======== ==== ==
-//        TESTING
-//========== ======== ==== ==
+    // Testing
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
@@ -81,15 +80,12 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.5.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
 
-//========== ======== ==== ==
-//        HILT
-//========== ======== ==== ==
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.44.2"
+    kapt "com.google.dagger:hilt-compiler:2.44.2"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
 
-//========== ======== ==== ==
-//        RETROFIT
-//========== ======== ==== ==
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
