Fix bug duplicate classes
One bug remains on kaptTask
The namespace from the build.gradle files were changed according to package name in modules
The package was specified in the manifest files according to this post's solution https://stackoverflow.com/questions/30287807/unexpected-top-level-exception-android-studio-and-andengine-duplicate-classes

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    namespace 'com.github.leuludyha.ibdb'
+    namespace 'com.github.leuludyha.data'
     compileSdk 33
 
     defaultConfig {
@@ -57,7 +57,7 @@ dependencies {
     implementation "androidx.room:room-paging:$room_version"
 
     // Paging 3.0
-    implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
+    implementation "androidx.paging:paging-compose:$paging_version"
 
 //========== ======== ==== ==
 //        SUBMODULES
