--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     //  Coil
     // implementation("io.coil-kt:coil-compose:1.4.0")
     //  GSON
-    // implementation 'com.google.code.gson:gson:2.8.9'
+    // implementation 'com.google.code.gson:gson:2.9.0'
     //  System UI Controller - Accompanist
     // implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
 
@@ -97,7 +97,7 @@ dependencies {
     implementation "androidx.room:room-paging:$room_version"
 
     // Paging 3.0
-    implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
+    implementation "androidx.paging:paging-compose:$paging_version"
 
 //========== ======== ==== ==
 //        SUBMODULES
