--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         hilt_version = "2.40.5"
         coroutine_version = "1.6.4"
         room_version = "2.5.0"
+        paging_version = "1.0.0-alpha18"
     }
 
     dependencies {
@@ -20,5 +21,5 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
