Fix bug duplicate classes & Compiler error
-> Migrate namespace from build.gradle files to AndroidManifest.xml files
-> change `org.jetbrains.kotlin.android` version from 1.7.* to 1.8.10
-> Build > Clean Project
-> Build > Rebuild Project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,6 @@ plugins {
 }
 
 android {
-    namespace 'com.github.leuludyha.ibdb'
     compileSdk 33
 
     defaultConfig {
@@ -21,6 +20,8 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+        buildConfigField("String", "BASE_URL", BASE_URL)
+        buildConfigField("String", "POSTER_URL", POSTER_URL)
     }
 
     buildTypes {
@@ -43,7 +44,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0'
+        kotlinCompilerExtensionVersion compose_compiler_version
     }
     packagingOptions {
         resources {
