Move package name from AndroidManifest.xml to build.gradle files & Change Instrumented test (data & domain) according to package names
Declaring namespace in Manifest is deprecated

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ plugins {
 android {
     compileSdk 33
 
+    namespace 'com.github.leuludyha.ibdb'
+
     defaultConfig {
         applicationId "com.github.leuludyha.ibdb"
         minSdk 24
