--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -6,6 +6,8 @@ plugins {
 android {
     compileSdk 33
 
+    namespace 'com.github.leuludyha.domain'
+
     defaultConfig {
         minSdk 24
         targetSdk 33
