--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,15 @@ buildscript {
         coroutine_version = "1.6.4"
         room_version = "2.5.0"
         paging_version = "1.0.0-alpha18"
+        kotlin_version = '1.8.20-RC'
     }
 
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+    repositories {
+        mavenCentral()
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
