--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         coroutine_version = "1.6.4"
         room_version = "2.5.0"
         paging_version = "1.0.0-alpha18"
-        kotlin_version = '1.8.20-RC'
+        kotlin_version = '1.8.10'
     }
 
     dependencies {
@@ -27,7 +27,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
 }
 
 task clean(type: Delete) {
