--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,6 +19,9 @@
             android:exported="false"
             android:label="@string/title_activity_greeting"
             android:theme="@style/Theme.IBDB" />
+        <activity
+            android:name=".BarcodeScanningActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
