--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,22 @@ dependencies {
     implementation project(path: ':data')
     implementation project(path: ':domain')
 
+    //Barcode
+    implementation 'com.google.mlkit:barcode-scanning:17.0.3'
+
+    //Some magic fixing to avoid duplicate classes at build time
+    //implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+
+    //Camerax
+    def camerax_version = "1.3.0-alpha04"
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-view:1.3.0-alpha04"
+
+    //Camera permission
+    implementation "com.google.accompanist:accompanist-permissions:0.19.0"
+
 //========== ======== ==== ==
 //        TESTING
 //========== ======== ==== ==
