--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,13 @@ buildscript {
     repositories {
         mavenCentral()
     }
+
+    //Added to use google ml-kit (for the barcode scanning)
+    repositories {
+        mavenLocal()
+        google()
+    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.2' apply false
