--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     //GSON
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    // Google truth for assertions
+    testImplementation "com.google.truth:truth:1.1.3"
+
     //ROOM DB
     //implementation "androidx.room:room-ktx:$room_version"
 
