--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jacoco:org.jacoco.core:0.8.8"
     }
     repositories {
         mavenCentral()
