--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,16 @@ buildscript {
         mavenCentral()
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
     id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
+}
+
+allprojects {
+    apply plugin: 'jacoco'
 }
 
 task clean(type: Delete) {
