Try change jacoco version to 0.8.8
The goal is to ignore auto-generated kotlin fields

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -26,6 +26,9 @@ android {
             testCoverageEnabled true
         }
     }
+    jacoco {
+        version = "0.8.8"
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
