--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,8 +77,8 @@ dependencies {
     // implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     //  Coil
     // implementation("io.coil-kt:coil-compose:1.4.0")
-    //  System UI Controller - Accompanist
-    // implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+    // System UI Controller - Accompanist
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
 
     //ROOM DB
     implementation "androidx.room:room-runtime:$room_version"
