--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-OPENLIBRARY_BASE_URL="https://openlibrary.org/"
+OPENLIBRARY_BASE_URL="https://openlibrary.org"
 
 # Implement CI (done by ourselves)
 org.gradle.daemon=true
