Refactor API for model

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,7 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 OPENLIBRARY_BASE_URL="https://openlibrary.org"
+OPENLIBRARY_COVERS_URL="https://covers.openlibrary.org/b/"
 
 # Implement CI (done by ourselves)
 org.gradle.daemon=true
