--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
         versionCode 1
         versionName "1.0"
         buildConfigField("String","OPENLIBRARY_BASE_URL",OPENLIBRARY_BASE_URL)
+        buildConfigField("String","OPENLIBRARY_COVERS_URL",OPENLIBRARY_COVERS_URL)
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
