--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,17 @@ buildscript {
         room_version = "2.5.0"
         paging_version = "1.0.0-alpha18"
         kotlin_version = '1.8.10'
+
+        google_services_version = "4.3.14"
+        firebase_bom_version = "29.3.1"
+        play_services_version = "1.6.0"
+        play_services_auth_version = "20.2.0"
     }
 
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.gms:google-services:$google_services_version"
     }
     repositories {
         mavenCentral()
