--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id "com.google.gms.google-services"
 }
 
 android {
@@ -57,6 +58,16 @@ dependencies {
 
     // Paging 3.0
     //implementation "androidx.paging:paging-compose:$paging_version"
+
+    //Firebase
+    implementation platform("com.google.firebase:firebase-bom:$firebase_bom_version")
+    implementation "com.google.firebase:firebase-auth-ktx"
+    implementation "com.google.firebase:firebase-firestore-ktx"
+
+    //Play Services
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$play_services_version"
+    implementation "com.google.android.gms:play-services-auth:$play_services_auth_version"
+
 }
 
 task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
@@ -66,13 +77,7 @@ task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'crea
     }
 
     def fileFilter = [
-            // data binding
-            'android/databinding/**/*.class',
-            '**/android/databinding/*Binding.class',
-            '**/android/databinding/*',
-            '**/androidx/databinding/*',
-            '**/BR.*',
-            // android
+            // TODO if we use Hilt later on, special case to handle (see bootcamp week 1)
             '**/R.class',
             '**/R$*.class',
             '**/BuildConfig.*',
