--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -53,10 +53,10 @@ dependencies {
     testImplementation "com.google.truth:truth:1.1.3"
 
     //ROOM DB
-    //implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     // Paging 3.0
-    //implementation "androidx.paging:paging-compose:$paging_version"
+    implementation "androidx.paging:paging-compose:$paging_version"
 }
 
 task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
