--- a/data/build.gradle
+++ b/data/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 
     // Google truth for assertions
     testImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
 
     //ROOM DB
     implementation "androidx.room:room-runtime:$room_version"
