--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
 
     implementation "androidx.core:core-ktx:$core_ktx_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0'
+    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.0")
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
