--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:name=".IBDB"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.screen.BarcodeScanningActivity"
+            android:name=".presentation.screen.search.barcode.BarcodeScanningActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
