--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -68,6 +68,12 @@ dependencies {
     //Barcode Analyser
     implementation 'com.google.mlkit:barcode-scanning:17.0.3'
     //implementation "androidx.paging:paging-compose:$paging_version"
+
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:31.3.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
 }
 
 task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
