Fix Connection first Bugs
Fix Connection visible bugs, Fix Share button not showing, Start adding test for Connection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,11 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
 
+        <meta-data
+            android:name="com.google.android.gms.nearby.connection.SERVICE_ID"
+            android:value="@string/nearby_service_id" />
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
