--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,9 @@ dependencies {
     implementation project(path: ':data')
     implementation project(path: ':domain')
 
+    // Nearby connections
+    implementation 'com.google.android.gms:play-services-nearby:18.5.0'
+
     //Barcode
     implementation 'com.google.mlkit:barcode-scanning:17.1.0'
 
